frontend/kubernetes-manifests/burnins.service.yaml
# Syntax reference https://kubernetes.io/docs/concepts/configuration/overview/
apiVersion: v1
kind: Service
metadata:
  name: burnins
spec:
  type: ClusterIP
  selector:
    app: burn-in-frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
